# polymap

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  justfile  msd.yaml  pyproject.toml
.github/workflows/: python-test.yaml  test.yaml
config/: config.yaml  msd_hard.yaml
junit/: test-results.xml
src/polymap/: __init__.py  config.py  interfaces.py  json_interfaces.py  logconf.py  paths.py  pydantic_models.py  visuals.py
src/polymap/bends/: b2.py  bends.py  errors.py  examples.py  generate.py  graph.py  i2.py  interfaces.py  iterate.py  iterate2.py  main.py  points.py  problems.py  utils.py  viz.py
src/polymap/cli/: main.py
src/polymap/examples/: bends.py  domains.py  layout.py  msd.py  sample_domains.py  sample_updates.py
src/polymap/geometry/: layout.py  ortho.py  paired_coords.py  range.py  shapely_helpers.py  surfaces.py  update.py  vectors.py
src/polymap/layout/: graph.py  interfaces.py  neighbors.py  run.py  u2.py  (+4 more)
tests/: test_graph.py  test_interference_filter.py  test_io.py  test_layout.py  test_ortho.py  test_range.py  test_surfaces.py  test_vectors.py  test_visuals.py
tests/test_bends/: study_domains.py  study_msd.py  test_bend_types.py  test_bends.py  test_bends_points.py  test_create_examples.py  test_examples.py  test_find_examples.py  test_generate.py  test_msd.py  test_nbs.py  test_process.py  test_segment.py  test_surface_graph.py
tests/test_geom/: test_ortho.py  test_surfaces.py  test_vectors.py
tests/test_layouts/: test_graph.py  test_layout.py  test_move_graph.py  test_nbs.py
tests/test_match2/: test_match.py
tests/test_nonortho/: test_sample_domains.py
tests/test_nonotho/: test_align_domain.py  test_align_vector.py  test_rotation.py
tests/test_precision/: test_precision.py
tests/test_pydantic/: test_pydantic.py
tests/test_rotate/: test_rotate.py
tests/test_surface_logic/: test_interference_filter.py  test_layout.py
tests/test_updates/: test_delete.py  test_msd.py  test_one.py  test_paired_coords.py  test_tuple.py  test_update_domains.py  test_update_paired_coords.py
trials/: test_align_domain.py  test_bends.py  test_bends_points.py  test_match.py  test_one.py  test_process.py  test_visuals.py
trials/bends/: test_bends.py  test_bends_points.py  test_kappas.py  test_shapely_bends.py
trials/meta/: study_pydantic_models.py  study_validation.py  test_match.py  test_process.py
trials/prelim/: test_align_domain.py  test_rotate.py
workflow/: Snakefile
workflow/rules/: cleanup.smk  common.smk
workflow/scripts/: preproc.py
(+54 files in other folders)
